Alpha 8.0.1 - 10th November 2021

- Fix for crafting jobs which got stuck with an inaccessible job location

Alpha 8 - 9th November 2021

- Reworked HUMANOID entities into more generic CREATURE entity type
- Settlers at very low happiness will now have several tantrums (attacking a nearby creature or furniture) before breaking and giving up on life
- Added "Race" type for creatures containing new data
- Definitions of body structure and organs for different races
- Dwarven body shape (fat/average/strong) is now based on a strength stat, determined by a strength distribution described as part of the race
- Added non-settler creature behaviour, to represent wild animals at this stage
- Added the following wild animals:
    - Deer
    - Fox
    - Wild boar
- Added Armory zone for crafting of weapons (and later armour), alongside weapons stockpile type
- Settler can now have a type of weapon assigned for them to keep hold of for combat
- (Re-)added the hunter profession, along with a hunting order and designation on entities (as opposed to a static location)
- Added a simple form of combat for hunting
- Ability for stockpile groups to hold corpses, only enabled for "Food" group currently
- Changed fish from items to creatures for butchery station to work consistently
- Corrected label on unpowered crafting stations (e.g. ore crusher) to show they are slowed but not disabled
- Improved job selection so same-priority profession-required jobs are selected before closer jobs of the same priority not requiring a profession
- Fix for crafting stations to use material selections from crafting management screen

Alpha 7.0.4 - 28th September 2021

- Furniture placements on top of irrigation channels no longer show as valid
- Fix for an issue with liquid transfers affecting save files fro Alpha 7.0.2 and below being used in Alpha 7.0.3
- Made liquid containers with a very small amount of liquid count as empty

Alpha 7.0.3 - 28th September 2021
