@@ -40,7 +40,7 @@
   "nightAmbienceSoundAssetName" : "Thunderstorm with rain",
   "oxidises" : true,
   "chanceToExtinguishFire" : 0.7,
-  "lightningStrikesPerHour" : 2.0,
+  "lightningStrikesPerHour" : 1.0,
   "accumulatesSnowPerHour" : -0.4,
   "happinessModifiers" : {
     "STANDING" : "CAUGHT_IN_RAIN",
@@ -54,7 +54,7 @@
   "dayAmbienceSoundAssetName" : "Isolated thunder",
   "nightAmbienceSoundAssetName" : "Isolated thunder",
   "oxidises" : false,
-  "lightningStrikesPerHour" : 1.0,
+  "lightningStrikesPerHour" : 0.7,
   "accumulatesSnowPerHour" : -0.08,
   "happinessModifiers" : { }
 }, {
