@@ -11,7 +11,7 @@ import java.nio.charset.Charset;
 public class GlobalSettings {
 	public static final boolean MAP_REVEALED = false;
 	public static final boolean DEV_MODE = false;
-	public static final boolean CHOOSE_SPAWN_LOCATION = false;
+	public static final boolean CHOOSE_SPAWN_LOCATION = true;
 
 	public static boolean USE_EDGE_SCROLLING = true;
 	public static boolean ZOOM_TO_CURSOR = true;
