@@ -1,3 +1,7 @@
+Alpha 8.0.2 - 16th November 2021
+
+- Fix for a crash that could happen while having a tantrum near the map edge
+
 Alpha 8.0.1 - 10th November 2021
 
 - Fix for crafting jobs which got stuck with an inaccessible job location
